# log_service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
log_service/: app.py  request_logs.txt
nginx/: nginx.conf
tests/: test_app.py
